media-keys: Fix crash when the shell vanishes/reappears

https://bugzilla.gnome.org/show_bug.cgi?id=697750